fix(GroupCard): truncate group title

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -172,6 +172,10 @@ button.btn-lg {
   font-weight: 600;
 }
 
+.font-black {
+  color: $black;
+}
+
 .auth-form-header {
   font-size: 36px;
   font-weight: 600;
